--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/drawer": "^5.11.2",
     "@react-navigation/native": "^5.8.8",
     "@react-navigation/stack": "^5.12.5",
     "expo": "~39.0.2",
@@ -18,9 +19,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.13.1",
-    "react-native-screens": "~2.10.1",
+    "react-native-screens": "^2.10.1",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3"
   },
